FrontEnd/ProgramParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\Program.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Frontend {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class ProgramParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, Whitespace=33, Newline=34, BlockComment=35, LineComment=36, 
		INT=37, SHORT=38, CHAR=39, VOID=40, IF=41, ELSE=42, WHILE=43, BREAK=44, 
		CONTINUE=45, RETURN=46, Id=47, Num=48;
	public const int
		RULE_program = 0, RULE_decl = 1, RULE_var_decl = 2, RULE_primary_expr = 3, 
		RULE_postfix_expr = 4, RULE_argument_expr_list = 5, RULE_unary_expr = 6, 
		RULE_assignmentExpr = 7, RULE_binaryExpr = 8, RULE_expr = 9, RULE_func_def = 10, 
		RULE_compound_stmt = 11, RULE_block_item_list = 12, RULE_block_item = 13, 
		RULE_param_list = 14, RULE_param = 15, RULE_stmt = 16, RULE_continue_stmt = 17, 
		RULE_break_stmt = 18, RULE_return_stmt = 19, RULE_expr_stmt = 20, RULE_selection_stmt = 21, 
		RULE_iteration_stmt = 22, RULE_num = 23, RULE_id = 24, RULE_type_spec = 25;
	public static readonly string[] ruleNames = {
		"program", "decl", "var_decl", "primary_expr", "postfix_expr", "argument_expr_list", 
		"unary_expr", "assignmentExpr", "binaryExpr", "expr", "func_def", "compound_stmt", 
		"block_item_list", "block_item", "param_list", "param", "stmt", "continue_stmt", 
		"break_stmt", "return_stmt", "expr_stmt", "selection_stmt", "iteration_stmt", 
		"num", "id", "type_spec"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'['", "']'", "'('", "')'", "','", "'++'", "'--'", "'$'", 
		"'!'", "'~'", "'='", "'*'", "'%'", "'/'", "'+'", "'-'", "'<<'", "'>>'", 
		"'<='", "'>='", "'<'", "'>'", "'=='", "'!='", "'&'", "'^'", "'|'", "'&&'", 
		"'||'", "'{'", "'}'", null, null, null, null, "'int'", "'short'", "'char'", 
		"'void'", "'if'", "'else'", "'while'", "'break'", "'continue'", "'return'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "Whitespace", "Newline", 
		"BlockComment", "LineComment", "INT", "SHORT", "CHAR", "VOID", "IF", "ELSE", 
		"WHILE", "BREAK", "CONTINUE", "RETURN", "Id", "Num"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Program.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ProgramParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ProgramParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ProgramParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DeclContext[] decl() {
			return GetRuleContexts<DeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclContext decl(int i) {
			return GetRuleContext<DeclContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 52;
				decl();
				}
				}
				State = 55;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << SHORT) | (1L << CHAR) | (1L << VOID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Var_declContext var_decl() {
			return GetRuleContext<Var_declContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Func_defContext func_def() {
			return GetRuleContext<Func_defContext>(0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitDecl(this);
		}
	}

	[RuleVersion(0)]
	public DeclContext decl() {
		DeclContext _localctx = new DeclContext(Context, State);
		EnterRule(_localctx, 2, RULE_decl);
		try {
			State = 59;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 57;
				var_decl();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 58;
				func_def();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Var_declContext : ParserRuleContext {
		public Var_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_var_decl; } }
	 
		public Var_declContext() { }
		public virtual void CopyFrom(Var_declContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Var_declHasArrContext : Var_declContext {
		[System.Diagnostics.DebuggerNonUserCode] public Type_specContext type_spec() {
			return GetRuleContext<Type_specContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumContext num() {
			return GetRuleContext<NumContext>(0);
		}
		public Var_declHasArrContext(Var_declContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterVar_declHasArr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitVar_declHasArr(this);
		}
	}
	public partial class Var_declHasIdContext : Var_declContext {
		[System.Diagnostics.DebuggerNonUserCode] public Type_specContext type_spec() {
			return GetRuleContext<Type_specContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public Var_declHasIdContext(Var_declContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterVar_declHasId(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitVar_declHasId(this);
		}
	}

	[RuleVersion(0)]
	public Var_declContext var_decl() {
		Var_declContext _localctx = new Var_declContext(Context, State);
		EnterRule(_localctx, 4, RULE_var_decl);
		try {
			State = 72;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				_localctx = new Var_declHasIdContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 61;
				type_spec();
				State = 62;
				id();
				State = 63;
				Match(T__0);
				}
				}
				break;
			case 2:
				_localctx = new Var_declHasArrContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 65;
				type_spec();
				State = 66;
				id();
				State = 67;
				Match(T__1);
				State = 68;
				num();
				State = 69;
				Match(T__2);
				State = 70;
				Match(T__0);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Primary_exprContext : ParserRuleContext {
		public Primary_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_primary_expr; } }
	 
		public Primary_exprContext() { }
		public virtual void CopyFrom(Primary_exprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Primary_exprHasIdContext : Primary_exprContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public Primary_exprHasIdContext(Primary_exprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterPrimary_exprHasId(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitPrimary_exprHasId(this);
		}
	}
	public partial class Primary_exprHasExprContext : Primary_exprContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public Primary_exprHasExprContext(Primary_exprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterPrimary_exprHasExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitPrimary_exprHasExpr(this);
		}
	}
	public partial class Primary_exprHasNumContext : Primary_exprContext {
		[System.Diagnostics.DebuggerNonUserCode] public NumContext num() {
			return GetRuleContext<NumContext>(0);
		}
		public Primary_exprHasNumContext(Primary_exprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterPrimary_exprHasNum(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitPrimary_exprHasNum(this);
		}
	}

	[RuleVersion(0)]
	public Primary_exprContext primary_expr() {
		Primary_exprContext _localctx = new Primary_exprContext(Context, State);
		EnterRule(_localctx, 6, RULE_primary_expr);
		try {
			State = 80;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__3:
				_localctx = new Primary_exprHasExprContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 74;
				Match(T__3);
				State = 75;
				expr();
				State = 76;
				Match(T__4);
				}
				break;
			case Id:
				_localctx = new Primary_exprHasIdContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 78;
				id();
				}
				break;
			case Num:
				_localctx = new Primary_exprHasNumContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 79;
				num();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Postfix_exprContext : ParserRuleContext {
		public Postfix_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_postfix_expr; } }
	 
		public Postfix_exprContext() { }
		public virtual void CopyFrom(Postfix_exprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Postfix_exprHasgetitemContext : Postfix_exprContext {
		[System.Diagnostics.DebuggerNonUserCode] public Primary_exprContext primary_expr() {
			return GetRuleContext<Primary_exprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public Postfix_exprHasgetitemContext(Postfix_exprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterPostfix_exprHasgetitem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitPostfix_exprHasgetitem(this);
		}
	}
	public partial class Postfix_exprHasPrimary_exprContext : Postfix_exprContext {
		[System.Diagnostics.DebuggerNonUserCode] public Primary_exprContext primary_expr() {
			return GetRuleContext<Primary_exprContext>(0);
		}
		public Postfix_exprHasPrimary_exprContext(Postfix_exprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterPostfix_exprHasPrimary_expr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitPostfix_exprHasPrimary_expr(this);
		}
	}
	public partial class Postfix_exprHasEmptyCallContext : Postfix_exprContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public Postfix_exprHasEmptyCallContext(Postfix_exprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterPostfix_exprHasEmptyCall(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitPostfix_exprHasEmptyCall(this);
		}
	}
	public partial class Postfix_exprHasCallContext : Postfix_exprContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Argument_expr_listContext argument_expr_list() {
			return GetRuleContext<Argument_expr_listContext>(0);
		}
		public Postfix_exprHasCallContext(Postfix_exprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterPostfix_exprHasCall(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitPostfix_exprHasCall(this);
		}
	}

	[RuleVersion(0)]
	public Postfix_exprContext postfix_expr() {
		Postfix_exprContext _localctx = new Postfix_exprContext(Context, State);
		EnterRule(_localctx, 8, RULE_postfix_expr);
		try {
			State = 97;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				_localctx = new Postfix_exprHasPrimary_exprContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 82;
				primary_expr();
				}
				break;
			case 2:
				_localctx = new Postfix_exprHasgetitemContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 83;
				primary_expr();
				State = 84;
				Match(T__1);
				State = 85;
				expr();
				State = 86;
				Match(T__2);
				}
				break;
			case 3:
				_localctx = new Postfix_exprHasEmptyCallContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 88;
				id();
				State = 89;
				Match(T__3);
				State = 90;
				Match(T__4);
				}
				break;
			case 4:
				_localctx = new Postfix_exprHasCallContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 92;
				id();
				State = 93;
				Match(T__3);
				State = 94;
				argument_expr_list();
				State = 95;
				Match(T__4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Argument_expr_listContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public Argument_expr_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_argument_expr_list; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterArgument_expr_list(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitArgument_expr_list(this);
		}
	}

	[RuleVersion(0)]
	public Argument_expr_listContext argument_expr_list() {
		Argument_expr_listContext _localctx = new Argument_expr_listContext(Context, State);
		EnterRule(_localctx, 10, RULE_argument_expr_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			expr();
			State = 104;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__5) {
				{
				{
				State = 100;
				Match(T__5);
				State = 101;
				expr();
				}
				}
				State = 106;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
